<resources>
    <string name="app_name">Stockii</string>
    <string name="login">Login</string>
    <string name="log_in">Log in</string>
    <string name="email" translatable="false">E-Mail</string>
    <string name="password">Password</string>
    <string name="log_into_stockii">Log into Stockii</string>
    <string name="logged_in_successfully">You have successfully logged in!</string>
    <string name="field_empty">Please fill out this field.</string>
    <string name="email_or_pass_incorrect">E-Mail or Password is incorrect</string>
    <string name="warehouses">Warehouses</string>
    <string name="products">Products</string>
    <string name="shipments">Shipments</string>
    <string name="log_out">Log out</string>
    <string name="user">User</string>
    <string name="working_from">Working from</string>
    <string name="to">to</string>
    <string name="location">Location</string>
    <string name="working_from_title">Working From</string>
    <string name="working_to_title">Working To</string>
    <string name="phone">Phone number</string>
    <string name="working_on_weekends">Is working on weekends?</string>
    <string name="warehouse_information">Warehouse Information</string>
    <string name="ok" translatable="false">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="quantity">Quantity</string>
    <string name="name">Name</string>
    <string name="warehouse_location">Warehouse location</string>
    <string name="limits">Limits</string>
    <string name="not_set">Not set</string>
    <string name="min">Minimum</string>
    <string name="max">Maximum</string>
    <string name="product_information">Product information</string>
    <string name="shipment_information">Shipment information</string>
    <string name="provider">Provider</string>
    <string name="status">Status</string>
    <string name="shipping_to_warehouse">Shipping to warehouse</string>
    <string name="arrived">Arrived</string>
    <string name="overdue">Overdue</string>
    <string name="move_product">Move product</string>
    <string name="actions">Actions</string>
    <string name="select_warehouse">Select warehouse</string>
    <string name="cancel">Cancel</string>
    <string name="move">Move</string>
    <string name="please_select_warehouse">Please select warehouse</string>
    <string name="product_moved">Product has been successfully moved!</string>
    <string name="cannot_move_product">Cannot move product.</string>
</resources>
