<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.AuthFragment">

    <data>
        <variable
            name="viewmodel"
            type="me.vidrox.stockii.ui.auth.AuthViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/auth_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardElevation="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp" >
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:id="@+id/auth_box_email"
                        app:errorEnabled="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/auth_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:text="@={viewmodel.email}"
                            android:hint="@string/email" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:id="@+id/auth_box_password"
                        app:errorEnabled="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true"
                        android:layout_marginBottom="8dp" >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/auth_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:text="@={viewmodel.password}"
                            android:hint="@string/password" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/auth_login_btn"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:onClick="@{viewmodel::onLoginBtnClick}"
                        android:text="@string/log_in"
                        android:backgroundTint="@color/colorPrimary"
                        android:textColor="@color/colorWhite"
                        android:layout_gravity="center">

                    </Button>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>